k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wallet-service
spec:
  type: ClusterIP
  selector:
    app: wallet-app
  ports:
    - port: 80
      targetPort: 8080
#      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
